--- a/src/index.ejs
+++ b/src/index.ejs
@@ -8,26 +8,11 @@
             content="width=device-width,  initial-scale=1, user-scalable=1, maximum-scale=1, minimum-scale=1"
     >
     <meta name="apple-mobile-web-app-capable" content="yes" />
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"/>
     <link rel="manifest" href="manifest.json">
 </head>
 <body style="margin: 0; min-height: 100%">
-<script>
-    var WebFontConfig = {
-        google: { families: [ 'Roboto:400,300,500:latin' ] }
-    };
-    (function() {
-        var wf = document.createElement('script');
-        wf.src = ('https:' == document.location.protocol ? 'https' : 'http') +
-            '://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js';
-        wf.type = 'text/javascript';
-        wf.async = 'true';
-        var s = document.getElementsByTagName('script')[0];
-        s.parentNode.insertBefore(wf, s);
-    })();
-</script>
-<div id="root">
-    <script src="https://apis.google.com/js/platform.js" async defer></script>
+<div id="root"/>
+<script src="https://apis.google.com/js/platform.js" async defer></script>
     <!-- Google Analytics -->
     <script>
         window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)};ga.l=+new Date;
@@ -43,6 +28,5 @@
     </script>
     <script async src='https://www.google-analytics.com/analytics.js'></script>
     <!-- End Google Analytics -->
-</div>
 </body>
 </html>
